# RaptorMark

./: .gitignore  README.md  build.gradle  privacy  settings.gradle
app/: build.gradle
app/src/androidTest/java/io/github/devriesl/raptormark/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  common.h  fio-config.h  fio-jni.cpp  fio-jni.h  helper.cpp  helper.h  native-lib.cpp  raptormark-jni.cpp  raptormark-jni.h
app/src/main/cpp/cjson/: CMakeLists.txt
app/src/main/cpp/fio/: CMakeLists.txt  fio-config.h  fio.c  fio.h  init.c  ioengines.c  log.c
app/src/main/cpp/fio-lib/lib/: pattern.c
app/src/main/cpp/fio-lib/t/: read-to-pipe-async.c
app/src/main/cpp/fio/engines/: io_uring.c
app/src/main/cpp/fio/os/: os-android.h
app/src/main/cpp/fio/t/: read-to-pipe-async.c
app/src/main/cpp/libaio/: CMakeLists.txt  io_getevents.c  libaio.h  syscall.h
app/src/main/cpp/mbw/: CMakeLists.txt  CPUCharacteristics.c  CPUCharacteristics.h  Testing.c  Testing.h  defs.h  main.c  routines-arm-64bit.s  routines.h
app/src/main/cpp/mbw/OOC/: Array.c  Array.h  CMakeLists.txt  Console.c  Console.h  DateTime.c  DateTime.h  Double.c  Double.h  Font.c  Font.h  FontBuiltin.c  FontBuiltin.h  FontPK.c  FontPK.h  Graphics.h  Image.c  Image.h  Int.c  Int.h  Log.c  Log.h  MutableArray.c  MutableArray.h  MutableImage.c  MutableImage.h  MutableString.c  MutableString.h  Object.c  Object.h  ObjectOriented.c  ObjectOriented.h  SimpleGraphing.c  SimpleGraphing.h  String.c  String.h  basicfont.h  cmr12.c  cmr5.c  cmr6.c  (+2 more)
app/src/main/java/io/github/devriesl/raptormark/: BenchmarkFragment.kt  Constants.kt  Converters.kt  HistoryFragment.kt  MainActivity.kt  RaptorActivity.kt  RaptorApplication.kt  SettingFragment.kt
app/src/main/java/io/github/devriesl/raptormark/adapters/: BenchmarkTestAdapter.kt  RaptorViewPagerAdapter.kt  SettingInfoAdapter.kt
app/src/main/java/io/github/devriesl/raptormark/data/: AboutInfoRepo.kt  BaseSettingInfo.kt  BenchmarkTest.kt  BenchmarkTestRepository.kt  BenchmarkTests.kt  FIOTest.kt  (+42 more)
app/src/main/res/drawable/: ic_benchmark_tab.xml  ic_history_tab.xml  ic_start_button.xml  ic_stop_button.xml
app/src/main/res/layout/: activity_raptor.xml  dialog_about.xml  fragment_benchmark.xml  fragment_setting.xml  list_item_benchmark_test.xml  list_item_setting_info.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/values-zh-rTW/: strings.xml
app/src/test/java/io/github/devriesl/raptormark/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
(+44 files in other folders)
